2008-12-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx, include/pqxx/transaction.hxx,
 src/dbtransaction.cxx, src/transaction.cxx,
 test/unit/test_read_transaction.cxx:
  - Added support for read-only transactions.
 tools/pqxx-fulltest:
  - Tried to augment postgresql.conf in wrong place
  - Build postgres without readline
2008-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/Makefile.am:
  - Fixed glitch that broke with Solaris "make," thanks Doug.
 test/test_helpers.hxx:
  - Bounds check failure message now includes value of violated boundary
2008-11-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Write postgres config data after initdb, not after building.
2008-11-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract_version, tools/preprelease, tools/release:
  - Automating part of release process
 VERSION
  - Use 2-level versions for x.0; more stability among 3-level versions
2008-10-31  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 test/unit/Makefile.am.template:
  - Added includes to fill 'make check' missing includes when building in
    non-stardard build directory.
 debian/rules:
  - Updated, deleted some cruft.
  - Corrected to pass '--enable-maintainer-mode' to configure. Now 'make
    check' in 'debian/build' directory creats properly linked 'runner'.
2008-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx, src/tablewriter.cxx,
 test/unit/test_tablestream.cxx:
  - Turned private WriteRawLine() into public write_raw_line()
  - Now supports tablereader-to-tablewriter copying
 tools/pqxx-fulltest:
  - Starting postmaster again, but was still killing postgres
2008-10-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Went back to invoking postmaster for compatibility with older versions
2008-10-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Removed warning; pipeline is stable now
 tools/pqxx-fulltest: