@@ -47,6 +47,7 @@ PQXX_HAVE_PQCLIENTENCODING	internal	libpq
 PQXX_HAVE_PQMBLEN	internal	libpq
 PQXX_HAVE_QUIET_NAN	internal	compiler
 PQXX_HAVE_REVERSE_ITERATOR	public	compiler
+PQXX_HAVE_SHARED_PTR	public	compiler
 PQXX_HAVE_SLEEP	internal	compiler
 PQXX_HAVE_STREAMBUF	public	compiler
 PQXX_HAVE_STRERROR_R	internal	compiler
